# blog

./: .eleventy.js  .eleventyignore  .gitignore  CNAME  README.md  Readme.md  SECURITY.md  _config.yml  alltags.njk  db.json  feed.njk  index.njk  package-lock.json  package.json  pyproject.toml  tag.njk  yolo.sh
__old/: README.md
_data/: less-compile.js  site.json
docs/: CNAME  atom.xml  index.html  style.css
posts/: 2024.12.0-security-issues.md  2025.12.0-security-issues.md  2026-06-a-conversation-with-tuta.md  2026.2-security-issues.md  Announcing-biweekly-releases.md  Announcing-new-apps.md  Building-mutually-beneficial-relationships.md  CryptPad-Funding-Status-2026.md  CryptPad-Funding-Status-January-2023.md  CryptPad-Funding-Status-January-2024.md  CryptPad-Funding-Status-January-2025.md  CryptPad-Funding-Status-July-2020.md  CryptPad-Jackalope-file-upload-pdf-and-pictures.md  CryptPad-Roadmap.md  CryptPad-ZeroKnowledge-Free-Software-needs-funding.md  CryptPad-at-FOSDEM-2021.md  CryptPad-funding-status-August-2018.md  CryptPad-funding-status-March-2019.md  CryptPad-funding-status-November-2018.md  CryptPad-funding-status-after-one-month.md  CryptPad-receives-NGI-Startup-Award.md  CryptPad-s-New-Direction.md  CryptPad-s-new-Secure-Cross-Domain-Iframe.md  CryptPad-use-it-love-it-support-it.md  FR-education-2022-11.md  Faster-loads-with-SharedWorker-ServiceWorker.md  Forum-launch.md  Funding-CryptPad.md  Heading-to-Barcelona.md  Join-the-team.md  Looking-back-looking-forward.md  Looking-for-translators.md  Making-CryptPad-CSS-3-times-faster-by-loading-it-twice.md  (+82 more)
(+704 files in other folders)
